[package]
name = "hyper-tor-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
pin-project = "1.0"
tokio = "1.23"
tokio-socks = "0.5"
tower = "0.4"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }
